test/fail/16-void_parameter_in_archetype.perk
archetype Test {
    fun f: void -> void
}